# sudachirs-python

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  fetch_dictionary.sh  setup.py
src/: dic.rs  lattice.rs  lib.rs  morpheme.rs  tokenizer.rs
src/dic/: grammar.rs  header.rs  lexicon.rs
src/dic/lexicon/: trie.rs  word_id_table.rs  word_infos.rs  word_params.rs
src/lattice/: node.rs
sudachirs/: __init__.py
tests/: benchmark_test.py
